# effective-mobile-test-task

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linter-and-tests.yml
app/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
app/tests/: conftest.py  test_models.py
db/: models.py
warehouse_manager/: __init__.py  app.py  crud.py  database.py  endpoints.py  main.py  models.py  schemas.py  settings.py
warehouse_manager/models/: base.py  orders.py  products.py
warehouse_manager/repositories/: base_repository.py  products.py
warehouse_manager/schemas/: orders.py  products.py
warehouse_manager/tests/: conftest.py  factories.py  test_orders.py  test_products.py
